Updated version of the code
* fix: updated missions code

* fix: updated spycats code

* fix: updated shared packages

* docs: updated README and swagger documentation

* chore: added github actions testing

* chore: updated github workflows file, README and postman docker compose file
