# docs/swagger.json
@@ -194,7 +194,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/missions/{missionId}/completion-state": {
             "patch": {
                 "description": "Updates the completion state of a mission by its Id.",
                 "consumes": [
@@ -730,7 +732,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/spycats/{spycatId}/salary": {
             "patch": {
                 "description": "Updates the salary of a spy cat by its I.",
                 "consumes": [
@@ -796,6 +800,9 @@
     "definitions": {
         "dtos.AssignCatRequest": {
             "type": "object",
+            "required": [
+                "spycat_id"
+            ],
             "properties": {
                 "spycat_id": {
                     "type": "string"
@@ -804,6 +811,9 @@
         },
         "dtos.CompletionStateRequest": {
             "type": "object",
+            "required": [
+                "complete_state"
+            ],
             "properties": {
                 "complete_state": {
                     "type": "string"
@@ -812,6 +822,9 @@
         },
         "dtos.DeletedIds": {
             "type": "object",
+            "required": [
+                "ids"
+            ],
             "properties": {
                 "ids": {
                     "type": "array",
@@ -846,6 +859,10 @@
         },
         "dtos.MissionCreateRequest": {
             "type": "object",
+            "required": [
+                "complete_state",
+                "targets"
+            ],
             "properties": {
                 "complete_state": {
                     "type": "string"
@@ -903,6 +920,12 @@
         },
         "dtos.MissionTargetRequest": {
             "type": "object",
+            "required": [
+                "complete_state",
+                "country",
+                "name",
+                "notes"
+            ],
             "properties": {
                 "complete_state": {
                     "type": "string"
@@ -920,6 +943,9 @@
         },
         "dtos.SalaryRequest": {
             "type": "object",
+            "required": [
+                "salary"
+            ],
             "properties": {
                 "salary": {
                     "type": "number"
@@ -948,6 +974,12 @@
         },
         "dtos.SpyCatCreateRequest": {
             "type": "object",
+            "required": [
+                "breed",
+                "experience_years",
+                "name",
+                "salary"
+            ],
             "properties": {
                 "breed": {
                     "type": "string"
